fix(pages container) refactor style, for fix jump element

--- a/src/components/Sidebar/Pages/Item/itemPages.scss
+++ b/src/components/Sidebar/Pages/Item/itemPages.scss
@@ -4,7 +4,6 @@
 
   .descriptionItem {
     cursor: pointer;
-    padding: 5px;
     position: relative;
 
     &:hover {
